Added UserProfile Page

--- a/users/customer/index.htm
+++ b/users/customer/index.htm
@@ -23,7 +23,7 @@
 			<h1><a href="/Exercise_73/users/customer/">My Custom Shop</a></h1>
 		</header>
 		<section class="user">
-			<div><label id="lbl_username">Loading...</label></div>
+			<div><a href="/Exercise_73/users/profile.htm"><label id="lbl_username">Loading...</label></a></div>
 			<div id="div_checkout" style="display: none;">
 				<button id="btn_checkout" type="button" class="btn btn-primary">Checkout (₹<span id="span_TotalCost">0</span>)</button>
 			</div>
