--- a/users/clerk/index.htm
+++ b/users/clerk/index.htm
@@ -12,7 +12,7 @@
 
 		<script type="text/javascript" src="/Exercise_73/_JS/libraries/jquery-3.5.1.min.js"></script>
 		<script type="module" src="/Exercise_73/_JS/general.js"></script>
-		<script type="module" src="/Exercise_73/_JS/manager-home.js"></script>
+		<script type="module" src="/Exercise_73/_JS/clerk-home.js"></script>
 
 		<title>MCS - Clerk Home</title>
 	</head>
@@ -23,7 +23,7 @@
 			<h1><a href="/Exercise_73/users/manager/">My Custom Shop</a></h1>
 		</header>
 		<section class="user">
-			<div><label id="lbl_username">Loading...</label></div>
+			<div><a href="/Exercise_73/users/profile.htm"><label id="lbl_username">Loading...</label></a></div>
 			<div><button class="btn btn-danger" id="btn_logout">Logout</button></div>
 		</section>
 
