--- a/users/manager/index.htm
+++ b/users/manager/index.htm
@@ -23,7 +23,7 @@
 			<h1><a href="/Exercise_73/users/manager/">My Custom Shop</a></h1>
 		</header>
 		<section class="user">
-			<div><label id="lbl_username">Loading...</label></div>
+			<div><a href="/Exercise_73/users/profile.htm"><label id="lbl_username">Loading...</label></a></div>
 			<div><button class="btn btn-danger" id="btn_logout">Logout</button></div>
 		</section>
 
