--- a/users/clerk/additem.htm
+++ b/users/clerk/additem.htm
@@ -16,7 +16,7 @@
 		<script type="module" src="/Exercise_73/_JS/general.js"></script>
 		<script type="module" src="/Exercise_73/_JS/clerk-additem.js"></script>
 
-		<title>MCS - Manager Reports</title>
+		<title>MCS - Clerk Add Item</title>
 	</head>
 
 	<body class="hide">
