--- a/users/profile.htm
+++ b/users/profile.htm
@@ -14,7 +14,7 @@
 		<script type="module" src="/Exercise_73/_JS/general.js"></script>
 		<script type="module" src="/Exercise_73/_JS/profile.js"></script>
 
-		<title>MCS - Profile</title>
+		<title>MCS - User Profile</title>
 	</head>
 
 	<body class="hide">
